Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-2368

Crash: impala::Sorter::Reset

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Impala 2.3.0
    • Impala 2.3.0
    • None
    • DB: random_nested_db_0
      Machine: vd0206.halxg.cloudera.com:33333

    Description

      Query:

      SELECT
      SUM(t2.pos) AS int_col,
      MIN(NULL) OVER (ORDER BY SUM(t2.pos), COALESCE(MIN(t3.pos), NULL, -290) ASC) AS int_col_1,
      COALESCE(MIN(t3.pos), NULL, -290) AS int_col_2
      FROM table_0 t1
      INNER JOIN t1.field_26.field_30 t2
      INNER JOIN t2.item t3 ON (((t3.pos) = (t1.field_26.field_29)) AND ((t3.item.field_37) = (t2.pos))) AND ((t3.item.field_33) = (t2.pos))
      WHERE
      (t3.pos) IN (SELECT
      LEAD(826, 85) OVER (ORDER BY t1.item.field_34 ASC, t1.item.field_36 DESC) AS int_col
      FROM t2.item t1)
      

      Stack Trace:

      #0  0x00007fea32121cc9 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
      #1  0x00007fea321250d8 in __GI_abort () at abort.c:89
      #2  0x0000000002116799 in google::DumpStackTraceAndExit () at src/utilities.cc:147
      #3  0x000000000210f84d in google::LogMessage::Fail () at src/logging.cc:1315
      #4  0x00000000021116d5 in google::LogMessage::SendToLog (this=0x7fe97d1e9a70) at src/logging.cc:1269
      #5  0x000000000210f3a3 in google::LogMessage::Flush (this=this@entry=0x7fe97d1e9a70) at src/logging.cc:1138
      #6  0x000000000211202e in google::LogMessageFatal::~LogMessageFatal (this=0x7fe97d1e9a70, __in_chrg=<optimized out>) at src/logging.cc:1836
      #7  0x000000000172a44a in impala::Sorter::Reset (this=0xc60d180) at /home/dev/Impala/be/src/runtime/sorter.cc:1070
      #8  0x00000000016cd0eb in impala::SortNode::Reset (this=0xf1b3200, state=0xbd2fb00) at /home/dev/Impala/be/src/exec/sort-node.cc:126
      #9  0x00000000015d125a in impala::ExecNode::Reset (this=0xf1c9c00, state=0xbd2fb00) at /home/dev/Impala/be/src/exec/exec-node.cc:166
      #10 0x00000000016e8821 in impala::AnalyticEvalNode::Reset (this=0xf1c9c00, state=0xbd2fb00) at /home/dev/Impala/be/src/exec/analytic-eval-node.cc:784
      #11 0x00000000015d125a in impala::ExecNode::Reset (this=0xf214000, state=0xbd2fb00) at /home/dev/Impala/be/src/exec/exec-node.cc:166
      #12 0x00000000016ae665 in impala::PartitionedHashJoinNode::Reset (this=0xf214000, state=0xbd2fb00) at /home/dev/Impala/be/src/exec/partitioned-hash-join-node.cc:210
      #13 0x00000000015d125a in impala::ExecNode::Reset (this=0xf20a6e0, state=0xbd2fb00) at /home/dev/Impala/be/src/exec/exec-node.cc:166
      #14 0x00000000016ce85b in impala::SubplanNode::Reset (this=0xf20a6e0, state=0xbd2fb00) at /home/dev/Impala/be/src/exec/subplan-node.cc:136
      #15 0x00000000015d125a in impala::ExecNode::Reset (this=0xf217680, state=0xbd2fb00) at /home/dev/Impala/be/src/exec/exec-node.cc:166
      #16 0x000000000168fb70 in impala::NestedLoopJoinNode::Reset (this=0xf217680, state=0xbd2fb00) at /home/dev/Impala/be/src/exec/nested-loop-join-node.cc:97
      #17 0x00000000016ce1a6 in impala::SubplanNode::GetNext (this=0xf20a000, state=0xbd2fb00, row_batch=0x7fe97d1e9f40, eos=0x7fe97d1e9e8e) at /home/dev/Impala/be/src/exec/subplan-node.cc:81
      #18 0x0000000001699a5c in impala::PartitionedAggregationNode::Open (this=0xf206c00, state=0xbd2fb00) at /home/dev/Impala/be/src/exec/partitioned-aggregation-node.cc:241
      #19 0x0000000001597bf3 in impala::PlanFragmentExecutor::OpenInternal (this=0xbd30f28) at /home/dev/Impala/be/src/runtime/plan-fragment-executor.cc:334
      #20 0x00000000015979f8 in impala::PlanFragmentExecutor::Open (this=0xbd30f28) at /home/dev/Impala/be/src/runtime/plan-fragment-executor.cc:320
      #21 0x000000000137d290 in impala::FragmentMgr::FragmentExecState::Exec (this=0xbd30d00) at /home/dev/Impala/be/src/service/fragment-exec-state.cc:50
      #22 0x0000000001375dcf in impala::FragmentMgr::FragmentExecThread (this=0xd5f6d80, exec_state=0xbd30d00) at /home/dev/Impala/be/src/service/fragment-mgr.cc:70
      #23 0x00000000013795da in boost::_mfi::mf1<void, impala::FragmentMgr, impala::FragmentMgr::FragmentExecState*>::operator() (this=0x11727420, p=0xd5f6d80, a1=0xbd30d00) at /usr/include/boost/bind/mem_fn_template.hpp:165
      #24 0x000000000137939d in boost::_bi::list2<boost::_bi::value<impala::FragmentMgr*>, boost::_bi::value<impala::FragmentMgr::FragmentExecState*> >::operator()<boost::_mfi::mf1<void, impala::FragmentMgr, impala::FragmentMgr::FragmentExecState*>, boost::_bi::list0> (this=0x11727430, f=..., a=...) at /usr/include/boost/bind/bind.hpp:313
      #25 0x0000000001378cb7 in boost::_bi::bind_t<void, boost::_mfi::mf1<void, impala::FragmentMgr, impala::FragmentMgr::FragmentExecState*>, boost::_bi::list2<boost::_bi::value<impala::FragmentMgr*>, boost::_bi::value<impala::FragmentMgr::FragmentExecState*> > >::operator() (this=0x11727420) at /usr/include/boost/bind/bind_template.hpp:20
      #26 0x000000000137860c in boost::detail::function::void_function_obj_invoker0<boost::_bi::bind_t<void, boost::_mfi::mf1<void, impala::FragmentMgr, impala::FragmentMgr::FragmentExecState*>, boost::_bi::list2<boost::_bi::value<impala::FragmentMgr*>, boost::_bi::value<impala::FragmentMgr::FragmentExecState*> > >, void>::invoke (function_obj_ptr=...) at /usr/include/boost/function/function_template.hpp:153
      #27 0x00000000012479d8 in boost::function0<void>::operator() (this=0x7fe97d1eae00) at /usr/include/boost/function/function_template.hpp:767
      #28 0x0000000001457233 in impala::Thread::SuperviseThread(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*) (name=..., category=..., functor=..., thread_started=0x7fe97e26bea0) at /home/dev/Impala/be/src/util/thread.cc:314
      #29 0x0000000001460469 in boost::_bi::list4<boost::_bi::value<std::string>, boost::_bi::value<std::string>, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::Promise<long>*> >::operator()<void (*)(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*), boost::_bi::list0>(boost::_bi::type<void>, void (*&)(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*), boost::_bi::list0&, int) (this=0x1057c1c0, f=@0x1057c1b8: 0x1456f2a <impala::Thread::SuperviseThread(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*)>, a=...) at /usr/include/boost/bind/bind.hpp:457
      #30 0x00000000014603b3 in boost::_bi::bind_t<void, void (*)(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*), boost::_bi::list4<boost::_bi::value<std::string>, boost::_bi::value<std::string>, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::Promise<long>*> > >::operator()() (this=0x1057c1b8) at /usr/include/boost/bind/bind_template.hpp:20
      #31 0x0000000001460378 in boost::detail::thread_data<boost::_bi::bind_t<void, void (*)(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*), boost::_bi::list4<boost::_bi::value<std::string>, boost::_bi::value<std::string>, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::Promise<long>*> > > >::run() (this=0x1057c000) at /usr/include/boost/thread/detail/thread.hpp:117
      #32 0x00007fea350eba4a in ?? () from /usr/lib/x86_64-linux-gnu/libboost_thread.so.1.54.0
      #33 0x00007fea34598182 in start_thread (arg=0x7fe97d1eb700) at pthread_create.c:312
      #34 0x00007fea321e547d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111
      

      impalad.FATAL:

      F0918 12:55:08.053592 20580 sorter.cc:1070] Check failed: unsorted_run_ == __null
      

      Steps to reproduce:

      ssh dev@vd0206.halxg.cloudera.com -p 33333 (pw: cloudera)
      run-all.sh && start-impala-cluster.py && impala-shell.sh;
      use random_nested_db_0;
      Core dumps are saved to /tmp/core_files on the machine
      

      Attachments

        Activity

          People

            alex.behm Alexander Behm
            tarasbob Taras Bobrovytsky
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: